# CitizenHack.nh

./: .gitignore  CMakeLists.txt
.github/workflows/: citizenhack.yml
dat/: antichamber.lua  castle.des  castle.lua  data.base  dungeon.def  dungeon.lua  forge.lua  forgefill.lua  gehennom.des  hellfill.lua  lake.lua  market.des  market.lua  sysconf
include/: .gitignore  artifact.h  artilist.h  decl.h  display.h  dungeon.h  extern.h  global.h  monattk.h  monflag.h  monst.h  monsters.h  nhlua.h  obj.h  objects.h  patchlevel.h  quest.h  windconf.h  you.h
src/: allmain.c  apply.c  artifact.c  cmd.c  decl.c  display.c  do.c  do_name.c  do_wear.c  dothrow.c  dungeon.c  end.c  exper.c  explode.c  hack.c  mail.c  makemon.c  mcastu.c  minion.c  mklev.c  mkobj.c  mon.c  mondata.c  monmove.c  monst.c  mthrowu.c  objects.c  objnam.c  pickup.c  polyself.c  potion.c  read.c  role.c  shk.c  shknam.c  sit.c  trap.c  version.c  wield.c  wizard.c  (+2 more)
sys/windows/: windmain.c
util/: CMakeLists.txt  update-nethack.sh
win/X11/: winX.c
win/curses/: cursinit.c
win/share/: artifacts.txt  monsters.txt  objects.txt  other.txt  tile2bmp.c  tilemap.c  tiletext.c
win/tty/: termcap.c  wintty.c
win/win32/: mhmain.c  mhsplash.c
